kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: battleship-ws-ingress
  namespace: applications
  annotations:
    spec.ingressClassName: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - battleship.mkcodergr.eu
    secretName: battleship-letsencrypt-cert
  rules:
  - host: battleship.mkcodergr.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ws-battleship-service
            port:
              number: 80
